--- a/clone/index.html
+++ b/clone/index.html
@@ -76,18 +76,68 @@
 
     <div class="container-3">
         <div class="box">
+            <h2 class="movie">Movies</h2>
             <div class="wrapper">
-                <div class="item"><img src="img/g1.jpg" alt=""><br><p></p></div>
-                <div class="item"><img src="img/g2.jpg" alt=""> </div>
-                <div class="item"><img src="img/g3.jpg" alt=""></div>
-                <div class="item"><img src="img/g4.jpg" alt=""></div>
-                <div class="item"><img src="img/g5.jpg" alt=""></div>
-                <div class="item"><img src="img/g6.jpg" alt=""></div>
-                <div class="item"><img src="img/g7.jpg" alt=""></div>
-                <div class="item"><img src="img/g8.jpg" alt=""></div>
-                <div class="item"><img src="img/g9.jpg" alt=""></div>
+                <div>
+                    <div class="item"><img src="img/g1.jpg" alt="" class="img1"></div>
+                    <p class="title">Grown Ups <br><span class="year">2010</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g2.jpg" alt=""> </div>
+                    <p class="title">Happy <br> Gilmore <br><span class="year">1996</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g3.jpg" alt=""></div>
+                    <p class="title">Just Go With It<br><span class="year">2011</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g4.jpg" alt=""></div>
+                    <p class="title">50 First Dates <br><span class="year">2004</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g5.jpg" alt=""></div>
+                    <p class="title">Billy Madison<br><span class="year">1995</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g6.jpg" alt="" class="img1"></div>
+                    <p class="title">Big Daddy <br><span class="year">1999</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g7.jpg" alt=""></div>
+                    <p class="title">Grown Ups 2 <br><span class="year">2013</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g8.jpg" alt=""></div>
+                    <p class="title">Click<br><span class="year">2006</span></p>
+                </div>
+                <div>
+                    <div class="item"><img src="img/g9.jpg" alt="" class="img1"></div>
+                    <p class="title">Blended <br><span class="year">2014</span></p>
+                </div>
             </div>
+            <section>
+                <p class="ask">People also ask</p>
+                <p class="question">How much is Adam Sandler's net worth?</p>
+                <p class="under2"></p>
+                <P class="question">Why is Adam Sandler so famous?</P>
+                <p class="under2"></p>
+                <p class="question">What is the highest rated Adam Sandler movie?</p>
+                <p class="under2"></p>
+                <p class="question">How much does it cost to hire Adam Sandler?</p>
+                <p class="under3"></p>
+            </section>
+        </div>
 
+        <div class="box-1">
+            <h2 class="aa">About</h2>
+            <p class="about">Adam Richard Sandler is an American actor and comedian. Primarily a comedic leading actor in films, his accolades include an Independent Spirit Award, alongside nominations for three Grammy Awards, five Primetime Emmy Awards, two Golden Globe Awards, and a Screen Actors Guild Award. <span class="wiki">wikipedia</span></p>
+            <p class="bb"><span class="cc">Born:</span> 9 September 1966 (age 58 years), <span class="wiki">Brooklyn, New York, United States</span> </p>
+            <p class="bb"><span class="cc">Spouse:</span> <span class="wiki">Jackie Sandler</span> (m. 2003)</p>
+            <p class="bb"><span class="cc">Upcoming movie:</span> <span class="wiki">Happy Gilmore 2</span></p>
+            <p class="bb"><span class="cc">Children:</span> <span class="wiki">Sunny Sandler, Sadie Sandler</span></p>
+            <p class="bb"><span class="cc">Height:</span> 1.77 m</p>
+            <p class="bb"><span class="cc">Parents:</span> <span class="wiki">Stanley Sandler, Judy Sandler</span></p>
+            <p class="feed">Feedback</p>
         </div>
 
     </div>
